--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "author": {
+    "name": "Fisherlea Systems",
+    "email": "support@fisherlea.com"
+  },
   "cordova": {
     "id": "cordova-plugin-fs-headset-control",
     "platforms": [
@@ -7,6 +11,7 @@
     ]
   },
   "dependencies": {},
+  "deprecated": false,
   "description": "Detect and control a wired or Bluetooth headset.",
   "devDependencies": {},
   "directories": {},
@@ -21,7 +26,7 @@
     "cordova-ios",
     "cordova-android"
   ],
-  "license": "Proprietary",
+  "license": "UNLICENSED",
   "maintainers": [
     {
       "name": "Wayne Fisher",
