--- a/plugin.xml
+++ b/plugin.xml
@@ -2,13 +2,13 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-fs-headset-control"
-        version="1.1.0">
+        version="1.1.1">
 
   <name>Headset Control</name>
 
   <description>Detect and control connection to a wired or Bluetooth headset.</description>
 
-  <license>UNLICENSED</license>
+  <license>MIT</license>
 
   <engines>
     <engine name="cordova" version=">=3.0.0"/>
