--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "name": "Wayne Fisher",
     "email": "wayne@fisherlea.com"
   },
+  "bugs": {
+    "url": "https://github.com/FisherleaSystems/cordova-plugin-fs-headset-detection/issues"
+  },
   "contributors": [
     "Eddy Verbruggen <eddyverbruggen@gmail.com>"
   ],
@@ -18,6 +21,7 @@
   "deprecated": false,
   "description": "Detect and control a wired or Bluetooth headset.",
   "devDependencies": {},
+  "homepage": "https://github.com/FisherleaSystems/cordova-plugin-fs-headset-detection#readme",
   "keywords": [
     "cordova",
     "bluetooth",
@@ -38,6 +42,10 @@
   ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/FisherleaSystems"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FisherleaSystems/cordova-plugin-fs-headset-detection.git"
   },
   "version": "1.1.1"
 }
