--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-fs-headset-control"
-        version="1.2.1">
+        version="1.3.0">
 
   <name>Headset Control</name>
 
@@ -11,7 +11,9 @@
   <license>MIT</license>
 
   <engines>
-    <engine name="cordova" version=">=3.0.0"/>
+    <engine name="cordova" version=">=9.0.0"/>
+    <engine name="cordova-android" version=">=11.0.0"/>
+    <engine name="cordova-ios" version=">=6.0.0"/>
   </engines>
 
   <!-- ios -->
@@ -40,8 +42,10 @@
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
+      <uses-feature android:name="android.hardware.bluetooth" android:required="false" />
       <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
       <uses-permission android:name="android.permission.BLUETOOTH" />
+      <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
       <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     </config-file>
 
