--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "devDependencies": {},
   "engines": {
     "cordovaDependencies": {
-      "1.2.0": { "cordova-android": "<11.0.0"},
-      "1.3.0": { "cordova-android": ">=11.0.0"}
+      "1.2.0": {
+        "cordova-android": "<11.0.0"
+      },
+      "1.3.0": {
+        "cordova-android": ">=11.0.0"
+      }
     }
   },
   "homepage": "https://github.com/FisherleaSystems/cordova-plugin-fs-headset-control#readme",
@@ -53,5 +57,5 @@
     "type": "git",
     "url": "git+https://github.com/FisherleaSystems/cordova-plugin-fs-headset-control.git"
   },
-  "version": "1.2.1"
+  "version": "1.3.0"
 }
