--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "type": "git",
     "url": "git+https://github.com/FisherleaSystems/cordova-plugin-fs-headset-control.git"
   },
-  "version": "1.3.0"
+  "version": "1.3.1-DEV"
 }
