--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "type": "git",
     "url": "git+https://github.com/FisherleaSystems/cordova-plugin-fs-headset-control.git"
   },
+  "scripts": {
+    "test": "echo \"No tests to run.\""
+  },
   "version": "1.3.1-DEV"
 }
