--- a/plugin.xml
+++ b/plugin.xml
@@ -6,12 +6,14 @@
 
   <name>Headset Control</name>
 
-  <description>Detect and control connection to a wired or Bluetooth headset.</description>
+  <description>
+    Detect and control connection to a wired or Bluetooth headset.
+    Supports Android and Apple iOS.
+  </description>
 
   <license>MIT</license>
 
   <engines>
-    <engine name="cordova" version=">=9.0.0"/>
     <engine name="cordova-android" version=">=11.0.0"/>
     <engine name="cordova-ios" version=">=6.0.0"/>
   </engines>
