--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "name": "Wayne Fisher",
     "email": "wayne@fisherlea.com"
   },
+  "version": "1.3.1-DEV",
   "bugs": {
     "url": "https://github.com/FisherleaSystems/cordova-plugin-fs-headset-control/issues"
   },
@@ -49,6 +50,5 @@
   },
   "scripts": {
     "test": "echo \"No tests to run.\""
-  },
-  "version": "1.3.1-DEV"
+  }
 }
