--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "Wayne Fisher",
     "email": "wayne@fisherlea.com"
   },
-  "version": "1.3.1-DEV",
+  "version": "1.3.1",
   "bugs": {
     "url": "https://github.com/FisherleaSystems/cordova-plugin-fs-headset-control/issues"
   },
